# SOEN_422_Project

./: .gitignore  CMakeLists.txt  README.md  README_Task3_BSL.txt  README_Task3_HAL.txt  README_Task4_VM.txt  README_Task5_Loader.txt  Task3_BSL.bat  Task3_BSL.hex  Task3_HAL.bat  Task3_HAL.c  Task3_HAL.hex  Task4.bat  Task4.c  Task4.hex  Task5.bat  VMT.hex  VMTest.c  VMTest.hex  mytest.hex  test2.hex  test_cout.c  tout.hex
loader/: Program.cs  loader.py  packet.py
src/: BSL.h  _console.c  _cout.c  admin.c  hal.c  hal_interman.c  hal_interman.h  hal_ioreg.c  hal_ioreg.h  in.c  in.h  vm.c
